finish user route
